--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Conway's Game of Life</title>
+<link rel="icon" type="image/png" href="/favicon.png">
 <style>
   html, body {
     margin: 0; padding: 0;
@@ -273,3 +274,4 @@ drawGrid();
 </script>
 </body>
 </html>
+
