This is the main file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Conway's Game of Life</title>
-<link rel="icon" type="image/png" href="/favicon.png">
+<link rel="icon" type="image/png" href="favicon.png">
 <style>
   html, body {
     margin: 0; padding: 0;
@@ -274,4 +274,5 @@ drawGrid();
 </script>
 </body>
 </html>
+
 
