--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Conway's Game of Life</title>
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/svg+xml" href="favicon.svg">
+<link rel="alternate icon" href="favicon.png" type="image/png">  
 <style>
   html, body {
     margin: 0; padding: 0;
@@ -274,5 +275,6 @@ drawGrid();
 </script>
 </body>
 </html>
+
 
 
