--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <link rel="icon" type="image/svg+xml" href="favicon.svg">
 <link rel="alternate icon" href="favicon.png" type="image/png">  
 <link rel="stylesheet" href="styles.css" type="text/css">
+<meta name="description" content="A modern, interactive implementation of Conway's Game of Life by Spoutcodes. Features zooming, panning, presets, undo/redo, drawing, and infinite grid expansion — all running directly in your browser.">
+<meta name="keywords" content="Conway's Game of Life, cellular automata, JavaScript, HTML5, canvas, Game of Life simulator, Spoutcodes, simulation, web app, interactive grid, glider, Gosper glider gun, open source">
+<meta name="author" content="Spoutcodes">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <canvas id="game"></canvas>
@@ -57,6 +61,7 @@
 <script src=conways.js></script>
 </body>
 </html>
+
 
 
 
