--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
   </button>
   <div id="watermark">
     <a href="https://github.com/Spoutcodes/Conways-Game-Of-Life" target="_blank">View source on GitHub</a>
+    <p>Project created by Wiktor Laskowski. (supercodes)</p>
+    <p>If you enjoy the app, please star the repository.</p>
   </div>
 </div>
 
@@ -61,6 +63,7 @@
 <script src=conways.js></script>
 </body>
 </html>
+
 
 
 
